<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/student_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/message_text"
        android:text="@string/id_1111_name_mikhail"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/message_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popupText"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/close_window_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@id/message_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>